operations/manifests/production/westeurope/monitoring/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  gateways:
  - istio-system/istio-ingressgw
  hosts:
  - grafana.production.euw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kube-prometheus-stack-grafana.observability.svc.cluster.local
